--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react_socialmediawebproject",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://e2050-faruk.github.io/react_socialmediawebproject",
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
@@ -11,12 +10,12 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.1.1",
     "formik": "^2.2.5",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
