--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react_socialmediawebproject",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.15.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
@@ -14,6 +17,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^8.1.1",
     "formik": "^2.2.5",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
