--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_socialmediawebproject",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://frkesen.github.io/react_sharepost",
   "engines": {
     "node": ">=14.15.0"
   },
